flux/apps/base/network-policies/monitoring/grafana-ingress.yaml
---
# Allow ingress to Grafana from ingress controller
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
  policyTypes:
  - Ingress
  ingress:
  # Allow from ingress gateway
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress
---
